Fix wrong color value

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,7 +3,7 @@
  */
 
 :root {
-  --black: 1a1a1a;
+  --black: #1a1a1a;
   --yellow-light: #fffcd5;
   --red: #c1272d;
 }
